<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/registeration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.contus.keerthi.myapp.Registration">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/contus_logo"
            android:id="@+id/contus_logo2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/company_logo"/>





        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/usernameWrap"
            android:layout_below="@+id/contus_logo2"
            app:errorEnabled="true"
            >
            <EditText
                android:id="@+id/username1"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameWrap"
            android:id="@+id/passwordwrap"
            app:errorEnabled="true" >

            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/registbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/registbtn"
            android:layout_below="@+id/passwordwrap"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:textColor="@color/white"/>

        <TextView
            android:text="@string/existing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/existing"
            android:layout_below="@+id/registbtn"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:textSize="@dimen/acc_activity"
            />



    </RelativeLayout>
</ScrollView>