<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <RelativeLayout
        android:id="@+id/login_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.contus.keerthi.myapp.LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/contus_logo"
            android:id="@+id/contus_logo"
            android:contentDescription="@string/company_logo"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>


        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/emailWrap"
                android:layout_below="@+id/contus_logo"
                app:errorEnabled="true"
                >

                <EditText
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/emailWrap"
                android:id="@+id/passwordwrap"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                >

                <EditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" />

            </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/loginbtn"
            android:layout_below="@+id/passwordwrap"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:textColor="@color/white"/>

        <TextView
            android:text="@string/new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/new_account"
            android:layout_below="@+id/loginbtn"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:textSize="@dimen/acc_activity"
            />

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signinopt"
            android:layout_below="@+id/new_account"
            android:layout_marginTop="20dp"
            >

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign with Gmail"
                />




        </android.support.v7.widget.ButtonBarLayout>



    </RelativeLayout>
</ScrollView>